<resources>
    <string name="app_name">MetroVeu</string>
    <string name="action_settings">Configuration</string>
    <string name="accept">ACCEPT</string>
    <string name="cancel">CANCEL</string>
    <string name="ajuda">Help</string>
    <string name="info">More info</string>

    <!-- home fragment -->
    <string name="home">Metro Veu</string>
    <string name="show_lines_button">Lines</string>
    <string name="show_rate_button">Rates</string>
    <string name="configuration_button">Configuration</string>
    <string name="help_button">Help</string>
    <string name="about_button">About</string>

    <!-- parada fragment -->
    <string name="parada">Station</string>
    <string name="adaptada">Adapted</string>
    <string name="noAdaptada">Not adapted</string>
    <string name="conexions">L00</string>
    <string name="comencar_ruta">Start route</string>
    <string name="afegir_a_ruta">Add station to route</string>
    <string name="eliminar_ultima_parada_afegida">Delete last added station</string>
    <string name="final_ruta">End route</string>
    <string name="ruta_exists">There is another route between those stations in the system</string>
    <string name="start_ruta_warning">ATTENTION</string>
    <string name="start_ruta_desc">You\'re about to start defining a route.\nDo you want to continue?</string>
    <string name="delete_ruta">Delete route button</string>
    <string name="delete_ruta_desc">You\'re about to delete a route.\nDo you want to continue?</string>
    <string name="delete_parada_ruta_desc">You\'re about to delete the last stop added.\nDo you want to continue?</string>

    <!-- help fragment -->
    <string name="ajuda_main1">Benvolgut/da usuari/a, \n \n
        MetroVeu és una aplicació dirigida a persones de totes les edats i accessible també,
        per a persones cegues o amb visibilitat reduïda.\n \n
    </string>

    <string name="ajuda_main2">Des de la pantalla principal, es pot accedir a línies, rutes, tarifes,
        configuració de l’aplicació, ajuda i autors.\n \n </string>
    <string name="ajuda_main3">A <b>línies</b> es poden veure totes les línies del metro de Barcelona i les seves parades. A més a més,
        es poden consultar els detalls de cadascuna de les parades i navegar passant el dit per la pantalla entre elles.\n \n </string>
    <string name="ajuda_main4">A <b>rutes</b> es poden veure i esborrar totes les rutes que s’han dissenyat
        per mitjà de l’aplicació.\n \n </string>
    <string name="ajuda_main5">A <b>tarifes</b> es pot veure la classificació de les diferents
        tarifes i la informació sobre els diferents tipus de bitllets existents.\n \n</string>
    <string name="ajuda_main6">A <b>configuració</b> es pot editar la presentació de l’aplicació per aquelles
        persones amb visibilitat reduïda. L’aplicació dóna la possibilitat d’escollir entre tres temes de presentació.\n \n</string>
    <string name="ajuda_main7">A <b>autors</b> es pot veure les dades de creació i dels autors de l’aplicació.</string>


    <!-- about fragment -->
    <string name="info_main">Benvolgut/da usuari/a,\n \n
        MetroVeu és un projecte Android impartit en l’assignatura de Projecte d’Enginyeria del Software del Grau d’Enginyeria Informàtica de la Universitat Politècnica de Catalunya (UPC). \n \n
        Els autors \n
        Els autors de l’aplicació son els estudiants Laura Carrio, Carla Diví, Flor Tarditti,
        Esteve Torrents i Joan Vilà. \n \n
        MetroVeu \n
        La finalitat del projecte és de tipus educatiu. El seu desenvolupament es va dur a terme el quadrimestre de primavera del curs 2015 - 2016.
    </string>

    <!-- lines fragment -->
    <string name="lines_title">Select one line</string>
    <string name="final_linia">Line end</string>
    <string name="linia">line</string>
    <string name="nom_linia">nomLinia</string>
    <string name="show_routes_button">Routes</string>

    <!-- routes fragment -->
    <string name="de">From</string>
    <string name="a">to</string>

    <!-- rates fragment -->
    <string name="nom_tarifa">Rate name</string>
    <string name="descripcio_tarifa">Rate description</string>
    <string name="preu_tarifa">Rate price</string>

    <!-- config fragment -->
    <string name="config_title">Application configuration</string>
    <string name="config1">Yellow over black</string>
    <string name="config2">Red over green</string>
    <string name="config3">White over purple</string>

    <!-- line colors -->
    <string name="L1">red</string>
    <string name="L2">purple</string>
    <string name="L3">green</string>
    <string name="L4">yellow</string>
    <string name="L5">blue</string>
    <string name="L9">orange</string>
    <string name="L10">light blue</string>
    <string name="L11">light green</string>

</resources>
