<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_gravity="center"
    android:layout_height="200dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="15dp"
        android:background="@color/color5Gray">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/start_ruta_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorBurgundy"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center_horizontal" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/description"
                    android:text="@string/delete_parada_ruta_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="16sp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:paddingBottom="1sp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_gravity="fill" />

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textColor="@color/colorBurgundy"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>